<resources>
    <string name="app_name">MajikaUnbound</string>
    <string name="title_twibbon">Twibbon</string>
    <string name="title_location">Lokasi</string>
    <string name="title_menu">Menu</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="btn_maps">Maps</string>
    <string name="capture_button">Capture</string>
    <string name="twibbon_result">Twibbon Result</string>
    <string name="recapture_button">Recapture</string>
    <string name="save_twibbon_button">Save Twibbon</string>
    <string name="temperature_value">0 °C</string>
    <string name="add_button">Add</string>
    <string name="increase_button">+</string>
    <string name="decrease_button">-</string>
    <string name="quantity">0</string>
    <string name="pay">Pay</string>
    <string name="total">Total:</string>
</resources>