<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_twibbon">

    <fragment
        android:id="@+id/navigation_twibbon"
        android:name="com.example.tubes1pbd.ui.twibbon.TwibbonMainFragment"
        android:label="@string/title_twibbon"
        tools:layout="@layout/fragment_twibbon_main" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.tubes1pbd.ui.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.tubes1pbd.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.example.tubes1pbd.ui.keranjang.CartFragment"
        android:label="@string/title_keranjang"
        tools:layout="@layout/fragment_cart" />
</navigation>